Fix buttons to be actual buttons + Hide text on mobile view

--- a/static/assets/css/tweaks.css
+++ b/static/assets/css/tweaks.css
@@ -21,7 +21,7 @@ body {
     fill: white;
 }
 
-.share-button a{
+.share-button span{
     color: white;
 }
 
